cli/tests/snapshots/integration__run_file@main_stackoverflow_mutual.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Stack overflow
  at g (/build/main_stackoverflow_mutual.mjs:2:15)
  at f (/build/main_stackoverflow_mutual.mjs:6:15)
  at g (/build/main_stackoverflow_mutual.mjs:2:15)
  at f (/build/main_stackoverflow_mutual.mjs:6:15)
  at g (/build/main_stackoverflow_mutual.mjs:2:15)
  at f (/build/main_stackoverflow_mutual.mjs:6:15)
  at g (/build/main_stackoverflow_mutual.mjs:2:15)
  at f (/build/main_stackoverflow_mutual.mjs:6:15)
  ...
STDERR
