cli/tests/snapshots/integration__run_file@main_stackoverflow_stdlib.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Stack overflow
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  at floop (/build/main_stackoverflow_stdlib.mjs:5:20)
  ...
STDERR
