cli/tests/snapshots/integration__run_file@main_todo.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Error at main_todo.gleam (main:2)
  `todo` expression evaluated. This code has not yet been implemented.
STDERR
warning: Todo found
  ┌─ /src/main_todo.gleam:2:3
  │
2 │   todo
  │   ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
