cli/tests/snapshots/integration__run_file@runtime_panic.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Error at runtime_panic.gleam (main:2)
  Pattern match failed, no pattern matched the value.
  value: Error("boom")
STDERR
warning: Assertion that will always fail
  ┌─ /src/runtime_panic.gleam:2:14
  │
2 │   let assert Ok(x) = Error("boom")
  │              ^^^^^

We can tell from the code above that the value will never match this
pattern and that this code will always crash.

Either change the pattern or use `panic` to unconditionally fail.
