cli/tests/snapshots/integration__run_file@world_on_tick.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Image
tick 1
Image
tick 2
Image
tick 3
Image
Image
STDERR
