cli/tests/snapshots/integration__run_file@world_tick_rate.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Image
Image
Image
Image
Image
Image
Image
max: True
Image
Image
Image
min: True
STDERR
